--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 </head>
 <body>
     <header>
-        <h1>Título da Página</h1>
+        <h1>Cursos grátis</h1>
     </header>
 
     <article>
-        <h2>Artigo 01</h2>
-        <p>Texto do Artigo 01</p>
+        <h2>Curso de HTML5 e CSS3</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A est dignissimos voluptates eos, dicta sequi id delectus! Nam nihil dicta facilis repellat. Culpa, vitae? Enim porro natus aliquid neque perferendis.</p>
     </article>
 
     <article>
-        <h2>Artigo 02</h2>
-        <p>Texto do Artigo 02</p>
+        <h2>Curso de JavaScript</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque modi natus autem numquam, temporibus odio odit culpa quae porro quos aliquam voluptatum excepturi placeat, quas tenetur dolorem in, reprehenderit magnam?</p>
     </article>
     
     <footer>
