--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <link rel="stylesheet" href="estilos/style.css">
 
-    <title>Título do Site</title>
+    <title>Curso em Vídeo</title>
 </head>
 <body>
     <header>
