Corrigindo linhas do parágrafo

--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
 
     <article>
         <h2>Curso de HTML5 e CSS3</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A est dignissimos voluptates eos, dicta sequi id delectus! Nam nihil dicta facilis repellat. Culpa, vitae? Enim porro natus aliquid neque perferendis.</p>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. A est dignissimos voluptates eos, dicta sequi id delectus! Nam nihil dicta facilis repellat. Culpa, vitae? Enim porro natus aliquid neque perferendis.
+        </p>
     </article>
 
     <article>
         <h2>Curso de JavaScript</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque modi natus autem numquam, temporibus odio odit culpa quae porro quos aliquam voluptatum excepturi placeat, quas tenetur dolorem in, reprehenderit magnam?</p>
+        <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque modi natus autem numquam, temporibus odio odit culpa quae porro quos aliquam voluptatum excepturi placeat, quas tenetur dolorem in, reprehenderit magnam?
+        </p>
     </article>
     
     <footer>
