--- a/index.html
+++ b/index.html
@@ -13,25 +13,26 @@
     <div>
     <header>
         <h1>Cursos grátis</h1>
+        <img src="imgs/curso-em-video-cor.png" alt="Curso em Vídeo">
     </header>
 
     <article>
         <h2>Curso de HTML5 e CSS3</h2>
+        <img style="float: right;" src="imgs/curso-html-css.png" alt="HTML5 e CSS3">
         <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. A est dignissimos voluptates eos, dicta sequi id delectus! Nam nihil dicta facilis repellat. Culpa, vitae? Enim porro natus aliquid neque perferendis.
         </p>
+        <a style="text-decoration: none;" href="curso-html.html">Acesse o curso de HTLM5 e CSS3</a>
     </article>
 
     <article>
         <h2>Curso de JavaScript</h2>
+        <img style="float: right;" src="imgs/curso-javascript.png" alt="JavaScript">
         <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque modi natus autem numquam, temporibus odio odit culpa quae porro quos aliquam voluptatum excepturi placeat, quas tenetur dolorem in, reprehenderit magnam?
         </p>
+        <a style="text-decoration: none;" href="curso-javascript.html">Acesse o curso de JavaScript</a>
     </article>
-    
-    <footer>
-        <h2>Rodapé da Página</h2>
-    </footer>
     </div>
 </body>
 </html>
