--- a/curso-html.html
+++ b/curso-html.html
@@ -9,15 +9,19 @@
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    <div>
-        <h1>Curso de HTLM5 e CSS3</h1>
-        <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis fuga ipsam similique facere quas molestias eaque consequuntur reprehenderit, consectetur repellendus aliquam itaque doloribus voluptate tempora provident enim inventore adipisci quaerat.
+    <main>
+        <h1>Cursos grátis</h1>
+        <h2>Curso de HTML5 e CSS3</h2>
+        <p class="texto">
+            <abbr title="HyperText Markup Language">HTML</abbr> (Linguagem de Marcação de HiperTexto) é o bloco de construção mais básico da web. Define o significado e a estrutura do conteúdo da web.
+        </p>
+        <p class="texto">
+            <abbr title="Cascading Style Sheets">CSS</abbr> (Folhas de Estilo em Cascata) é uma linguagem de estilo usada para descrever a apresentação de um documento escrito em HTML ou em XML (incluindo várias linguagens em <abbr title="eXtensible Markup Language">XML</abbr> como <abbr title="Scalable Vector Graphics">SVG</abbr>, <abbr title="Mathematical Markup Language">MathML</abbr> ou <abbr title="EXtensible HyperText Markup Language">XHTML)</abbr>. O CSS descreve como elementos são mostrados na tela, no papel, na fala ou em outras mídias.
         </p>
 
         <iframe style="width: 500px;" width="560" height="315" src="https://www.youtube.com/embed/E6CdIawPTh0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <a href="index.html"><img src="imgs/btn-back.png" alt="Voltar"></a>
-    </div>
+    </main>
 </body>
 </html>
