--- a/curso-javascript.html
+++ b/curso-javascript.html
@@ -9,15 +9,15 @@
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    <div>
-        <h1>Curso de JavaScript</h1>
-        <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut recusandae dignissimos cupiditate ab, explicabo quis, alias pariatur libero totam odit tempora. Doloribus dolorem explicabo asperiores, maxime maiores labore vitae necessitatibus?
+    <main>
+        <h1>Cursos grátis</h1>
+        <h2>Curso de JavaScript</h2>
+        <p class="texto">
+            JavaScript (às vezes abreviado para JS) é uma linguagem leve, interpretada e baseada em objetos com funções de primeira classe, mais conhecida como a linguagem de script para páginas Web, mas usada também em vários outros ambientes sem browser, tais como Node.js,  Apache CouchDB e Adobe Acrobat. O JavaScript é uma linguagem baseada em protótipos, multi-paradigma e dinâmica, suportando estilos de orientação a objetos, imperativos e declarativos (como por exemplo a programação funcional).
         </p>
-
         <iframe style="width: 500px;" width="560" height="315" src="https://www.youtube.com/embed/OmmJBfcMJA8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <a href="index.html"><img src="imgs/btn-back.png" alt="Voltar"></a>
-    </div>
+    </main>
 </body>
 </html>
