--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <title>Curso em Vídeo</title>
     
     <link rel="stylesheet" href="estilos/style.css">
-
 </head>
 <body>
-    <div>
+    <main>
     <header>
         <h1>Cursos grátis</h1>
         <img src="imgs/curso-em-video-cor.png" alt="Curso em Vídeo">
@@ -19,20 +18,23 @@
     <article>
         <h2>Curso de HTML5 e CSS3</h2>
         <img style="float: right;" src="imgs/curso-html-css.png" alt="HTML5 e CSS3">
-        <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. A est dignissimos voluptates eos, dicta sequi id delectus! Nam nihil dicta facilis repellat. Culpa, vitae? Enim porro natus aliquid neque perferendis.
+        <p class="texto">
+            <abbr title="Hypertext Markup Language">HTML</abbr> (Linguagem de Marcação de HiperTexto) é o bloco de construção mais básico da web. Define o significado e a estrutura do conteúdo da web.
+        </p>
+        <p class="texto">
+            <abbr title="Cascading Style Sheets">CSS</abbr> (Folhas de Estilo em Cascata) é uma linguagem de estilo usada para descrever a apresentação de um documento escrito em HTML ou em <abbr title="eXtensible Markup Language">XML</abbr> (incluindo várias linguagens em XML como <abbr title="Scalable Vector Graphics">SVG</abbr>, <abbr title="Mathematical Markup Language">MathML</abbr> ou <abbr title="EXtensible Hypertext Markup Language">XHTML)</abbr>. O CSS descreve como elementos são mostrados na tela, no papel, na fala ou em outras mídias.
         </p>
         <a style="text-decoration: none;" href="curso-html.html">Acesse o curso de HTLM5 e CSS3</a>
     </article>
 
     <article>
         <h2>Curso de JavaScript</h2>
-        <img style="float: right;" src="imgs/curso-javascript.png" alt="JavaScript">
-        <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque modi natus autem numquam, temporibus odio odit culpa quae porro quos aliquam voluptatum excepturi placeat, quas tenetur dolorem in, reprehenderit magnam?
+        <img style="float: right; padding-left: 10px;" src="imgs/curso-javascript.png" alt="JavaScript">
+        <p class="texto">
+            JavaScript (às vezes abreviado para JS) é uma linguagem leve, interpretada e baseada em objetos com funções de primeira classe, mais conhecida como a linguagem de script para páginas Web, mas usada também em vários outros ambientes sem browser, tais como Node.js,  Apache CouchDB e Adobe Acrobat. O JavaScript é uma linguagem baseada em protótipos, multi-paradigma e dinâmica, suportando estilos de orientação a objetos, imperativos e declarativos (como por exemplo a programação funcional).
         </p>
         <a style="text-decoration: none;" href="curso-javascript.html">Acesse o curso de JavaScript</a>
     </article>
-    </div>
+    </main>
 </body>
 </html>
